--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,37 @@
 [package]
-name = "products"
+name = "product"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "2.0.0"
-serde = "1.0"
-serde_derive = "1.0"
+async-stream = "0.3"
+futures = { version = "0.3", default-features = false, features = ["alloc"] }
+prost = "0.10"
+tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
+tokio-stream = { version = "0.1", features = ["net"] }
+tonic = { version="0.7.2", features = ["tls", "compression"] }
+tower = { version = "0.4" }
+rand = "0.8"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+bytes = "1"
+h2 = "0.3"
+tokio-rustls = "*"
+hyper-rustls = { version = "0.23", features = ["http2"] }
+rustls-pemfile = "*" 
+dotenv = "0.15.0"
+dotenv_codegen = "0.15.0"
+tower-http = { version = "0.3", features = ["add-extension", "util"] }
+db= { path= "../db/rust" }
+uuid = {version = "*", features = ["v4","fast-rng","macro-diagnostics" ]}
+chrono = "0.4"
+kafka = { path = "../kafka/rust" }
+models = { path = "../models/rust" }
+may = "0.3.21"
+utils = {path = "../utils/rust"}
+
+[build-dependencies]
+tonic-build = { version="0.7.2", features = ["prost", "compression"] }
+
